--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,3 +14,26 @@ html, body {
   overflow: hidden;
 }
 
+.form-container {
+  background-color: #212529;
+  width:fit-content;
+  padding: 40px;
+  border-radius: 15px;
+}
+
+.form-header-col {
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.form-button-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.input-error{
+  font-size: 12px;
+  color: red
+}
